# Solar-Knight

./: .gitignore  .gitmodules  Cargo.toml  README.MD  build.rs
bevy_game/: Cargo.toml
bevy_game/src/: bullet.rs  collision_daemon.rs  debug_systems.rs  health.rs  inspector_impls.rs  layer_system.rs  main.rs  mouse_pos.rs  player_ship.rs  ship.rs  team.rs
cgmath_ext/: Cargo.toml
cgmath_ext/src/: lib.rs  transform2d_utils.rs  vec_ext.rs
collision/: Cargo.toml
collision/src/: base.rs  lib.rs
game/: Cargo.toml
game/src/: lib.rs  rags_impl.rs
game/src/loaders/: texture.rs
game/src/states/: booting.rs  main_game.rs  main_game_debug_mode.rs  main_menu.rs  mod.rs  testing.rs
game/src/states/main_game/: earth.rs  mod.rs  player.rs  ships.rs
game/src/states/main_game/enemies/: brute.rs  tester.rs
game/src/states/main_game_debug_mode/: attachment_edit.rs  free_cam.rs  mod.rs  ship_inspector.rs  ship_placement.rs
game_bootstrap/: Cargo.toml
game_bootstrap/src/: main.rs
loaders/: Cargo.toml
loaders/src/: lib.rs
pack/: Cargo.toml
pack/src/: lib.rs
ship_parts/: Cargo.toml
ship_parts/src/: ai_machine.rs  attachment.rs  collision_models.rs  constants.rs  core.rs  earth.rs  engine.rs  gun.rs  lib.rs  part_trait.rs  physics.rs  player.rs  render.rs  ship.rs  square_map.rs  storage.rs  storage_traits.rs
ship_parts/src/loaders/: texture.rs
ship_parts/tests/: square_map.rs
src/: basic_graphics_data.rs  collision.rs  collision_models.rs  graphics_init.rs  graphics_utils.rs  macros.rs  main.rs  transform2d_utils.rs
src/containers/: .memory_chunk.rs.swp  linked_lists.rs  memory_chunk.rs  mod.rs
src/loaders/: mod.rs  texture.rs
src/shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl  blur_shader.glsl  instanced_sprite_vertex_shader.glsl
src/states/: booting.rs  main_menu.rs  mod.rs
src/states/main_game/: earth.rs  mod.rs  player.rs
src/states/main_game/enemies/: .brute.rs.swp  mod.rs  tester.rs
std_ext/: Cargo.toml
std_ext/src/: duration_ext.rs  lib.rs  slice_ext.rs
std_ext/src/collections/: consistent_chunk.rs  consistent_linear_chunk.rs  linked_lists.rs  memory_chunk.rs  mod.rs
sys_api/: Cargo.toml
sys_api/src/: basic_graphics_data.rs  graphics_init.rs  graphics_utils.rs  input_tracker.rs  lib.rs
sys_api/src/shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl  instanced_sprite_vertex_shader.glsl  solid_fragment_shader.glsl  solid_vertex_shader.glsl
systems/: Cargo.toml
systems/src/: lib.rs
text_render/: Cargo.toml
text_render/src/: freetype_wrap.rs  lib.rs  pack.rs  render.rs
