[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_rapier2d = "0.12.0"
bevy_egui = "0.10"
bevy-inspector-egui = "0.7.6"
strum = "0.23.0"
strum_macros = "0.23.0"
