[package]
name = "game"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
cgmath = "0.18.0"
glium = "0.29.0"
log = "*"
image = "*"
rand = "0.8.3"
lazy_static = "1.4.0"
egui = "0.12.0"
egui_glium = "0.12.0"

sys_api = { path = "../sys_api" }
collision = { path = "../collision" }
ship_parts = { path = "../ship_parts" }
std_ext = { path = "../std_ext" }
cgmath_ext = { path = "../cgmath_ext" }
