[package]
name = "game_bootstrap"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.0"
egui_glium = "0.12.0"
log = "*"
cfg-if = "*"
simplelog = "*"

sys_api = { path = "../sys_api" }
collision = { path = "../collision" }
ship_parts = { path = "../ship_parts" }
std_ext = { path = "../std_ext" }
cgmath_ext = { path = "../cgmath_ext" }
game = { path = "../game" }

[features]
default = []

bench = []
