[package]
name = "ship_parts"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
slab = { version = "0.4.3", features = ["serde"]}
tinyvec = "1.2.0"
cgmath = "0.18.0"
glium = "0.29.0"
serde = "1.0.123"
serde_derive = "1.0.126"

std_ext = { path = "../std_ext" }
collision = { path = "../collision" }
sys_api = { path = "../sys_api" }
cgmath_ext = { path = "../cgmath_ext" }
