[package]
name = "ship_parts"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
slab = { version = "0.4.3", features = ["serde"]}
tinyvec = { version = "1.2.0", features = ["serde"]}
cgmath = { version = "0.18.0", features = ["serde"]}
glium = "0.29.0"
serde = { version = "1.0.123", features = ["derive"]}
log = "*"
image = "*"

std_ext = { path = "../std_ext" }
collision = { path = "../collision" }
sys_api = { path = "../sys_api" }
cgmath_ext = { path = "../cgmath_ext" }
loaders = { path = "../loaders" }
pack = { path = "../pack" }
