[package]
name = "ship_parts"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
float-ord = "0.3.1"
slab = { version = "0.4.3", features = ["serde"]}
tinyvec = { version = "1.2.0", features = ["serde"]}
nalgebra = "0.29.0"
glium = "0.29.0"
serde = { version = "1.0.123", features = ["derive"]}
log = "*"
image = "*"

std_ext = { path = "../std_ext" }
sys_api = { path = "../sys_api" }
loaders = { path = "../loaders" }
pack = { path = "../pack" }
systems = { path = "../systems" }
