[package]
name = "systems"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
systems_core = { path = "packages/systems_core" }
# the systems
square_map = { path = "packages/square_map" }
ship_transform = { path = "packages/ship_transform" }
ship_gun = { path = "packages/ship_gun" }
ship_engine = { path = "packages/ship_engine" }
hp_system = { path = "packages/hp_system" }
collision_check = { path = "packages/collision_check" }
physics = { path = "packages/physics" }
teams = { path = "packages/teams" }
ship_attachment = { path = "packages/ship_attachment" }
