[package]
name = "text_render"
version = "0.1.0"
authors = ["InnocentusLime <InnocentusLime.help@gmail.com>"]
edition = "2018"
description = "A modular crate for quick text drawing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I have picked the `freetype-sys` crate, because 
# it's used by `freetype`, whic is used by Servo
freetype-sys = { path = "../freetype-sys/" }
#freetype-sys = "0.14.0"

# Dev-dependencies
#image = "*"
